[package]
name = "egui-macroquad"
version = "0.16.1"
authors = ["Ilya Sheprut <optozorax@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
homepage = "https://github.com/optozorax/egui-macroquad"
repository = "https://github.com/optozorax/egui-macroquad"
description = "Bindings between egui and macroquad"
readme = "README.md"
categories = ["gui", "game-development"]
keywords = ["gui", "imgui", "immediate", "portable", "gamedev"]
include = [
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
]

[dependencies]
egui = "0.27.0"
egui-miniquad = { git = 'https://github.com/birhburh/egui-miniquad.git', branch="blocking_event_loop" }
# egui-miniquad = { git = 'https://github.com/not-fl3/egui-miniquad.git', rev="5df57233a60f75faadfa14a3ad9d4cddde637605" }
# macroquad = { version="0.4.8", default-features=false }
macroquad = { git = 'https://github.com/not-fl3/macroquad.git' }

[patch.crates-io]
# until new version added
miniquad = { git = "https://github.com/not-fl3/miniquad.git" }


[features]
default = ["audio"]
audio = ["macroquad/audio"]

[dev-dependencies]
egui_demo_lib = "0.27.0"

[profile.release]
opt-level = 2
